wording tweak in guide

--- a/content/guides/deps_and_cli.adoc
+++ b/content/guides/deps_and_cli.adoc
@@ -139,7 +139,7 @@ In a new directory, use the deps.edn file you already have, and create a file `s
     dt))
 ----
 
-Then our application is reduced to:
+Then the original application is reduced to:
 
 [source,clojure]
 ----
