--- a/content/community/downloads.adoc
+++ b/content/community/downloads.adoc
@@ -7,18 +7,17 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Stable Release: 1.8.0 (Jan 19, 2016)
+== Stable Release: 1.9.0 (Dec 8, 2017)
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.8.0/[Clojure 1.8.0]
+* https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0/[Clojure 1.9.0]
 * https://github.com/clojure/clojure/blob/master/changes.md[Changelog]
-* Requirements: Java 1.6, 1.7, or 1.8
+* Requirements: Java 1.6+ (recommended: Java 1.8+)
 
-== Development Release: 1.9.0-RC2 (Nov 27, 2017)
+== Development Release: no release yet
 
-* https://repo1.maven.org/maven2/org/clojure/clojure/1.9.0-RC2/[Clojure 1.9.0-RC2]
-* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.9.0*[Clojure 1.9 pre-release builds]
+* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.0*[Clojure 1.10 pre-release builds]
 * <<devchangelog#,Dev changelog>>
-* Requirements: Java 1.6, 1.7, or 1.8
+* Requirements: Java 1.6+ (recommended: Java 1.8+)
 
 == Clojure Source
 
