--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -17,7 +17,7 @@ To use spec, declare a dependency on Clojure 1.9:
 
 [source, clojure]
 ----
-[org.clojure/clojure "1.9.0-RC2"]
+[org.clojure/clojure "1.9.0"]
 ----
 
 To start working with spec, require the `clojure.spec.alpha` namespace at the REPL:
