--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -42,6 +42,7 @@ Community:
 * http://clojurekoans.com/[Clojure Koans] (http://clojurescriptkoans.com/[online])
 * http://www.4clojure.com/[4clojure] - Clojure practice problems
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
+* https://clojurecademy.com/[Clojurecademy] - interactive Clojure learning
 * https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
 * http://planet.clojure.in/[Planet Clojure] - Clojure blog aggregator
 * http://www.clojure-toolbox.com/[Clojure Toolbox] - a categorized index of Clojure libraries
