--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,15 +12,20 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
-| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled"]
-| https://leanpub.com/clojurescript-unraveled[ClojureScript Unraveled] +
-by Andrey Antukh, Alejandro Gómez +
-Jul 25, 2016
+| image::http://ecx.images-amazon.com/images/I/41k50H6VpaL._SL160.jpg[ClojureScript Unraveled,link="http://a.co/cDfN4n4"]
+| http://a.co/cDfN4n4[Quick Clojure: Effective Functional Programming] +
+by Mark McDonnell +
+Aug 23, 2017
 
 | image::http://ecx.images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="http://a.co/c2gI4l2"]
 | http://a.co/c2gI4l2[Web Development with Clojure] +
 by Dmitri Sotnikov +
-Jul 17, 2016
+Aug 23, 2016
+
+| image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled"]
+| https://leanpub.com/clojurescript-unraveled[ClojureScript Unraveled] +
+by Andrey Antukh, Alejandro Gómez +
+Jul 25, 2016
 
 | image::http://ecx.images-amazon.com/images/I/51EwRiXh4ZL._SL160.jpg[Learning ClojureScript, link="http://a.co/2X3MJn2"]
 | http://a.co/2X3MJn2[Learning ClojureScript] +
