--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -33,9 +33,9 @@ brew install clojure
 
 [source,shell]
 ----
-curl -O https://download.clojure.org/install/linux-install.sh
-chmod +x linux-install.sh
-sudo ./linux-install.sh
+curl -O https://download.clojure.org/install/linux-install-1.9.0.273.sh
+chmod +x linux-install-1.9.0.273.sh
+sudo ./linux-install-1.9.0.273.sh
 ----
 
 Platform installers (apt-get, etc) will be available in the future.
